--- a/src/main/resources/.properties
+++ b/src/main/resources/.properties
@@ -3,7 +3,12 @@ europack.version=${project.version}
 
 europack.apis=https://api.deutsche-digitale-bibliothek.de|\
 https://api-q1.deutsche-digitale-bibliothek.de|\
-https://api-q2.deutsche-digitale-bibliothek.de
+https://api-q2.deutsche-digitale-bibliothek.de|\
+https://dev-ddb.fiz-karlsruhe.de/api
+
+europack.edm.profiles=|\
+https://www.deutsche-digitale-bibliothek.de/ns/europeana-edm-profile|\
+https://www.deutsche-digitale-bibliothek.de/ns/ddb-linkedData-profile
 
 europack.filters=CropRdfFilter|\
 HierarchieFilter|\
