--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.ddb</groupId>
     <artifactId>europack</artifactId>
-    <version>3.2-beta.1</version>
+    <version>3.2-beta.2</version>
     <packaging>jar</packaging>
     <name>Europack</name>
     <url>https://mbuechner.github.io/europack/</url>
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.10</version>
+            <version>2.10.2</version>
             <type>jar</type>
         </dependency>
         <!--        <dependency>
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>4.2.0</version>
+            <version>4.4.0</version>
         </dependency>
     </dependencies>
     <build>
@@ -102,7 +102,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.1.2</version>
+                <version>3.2.0</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -157,7 +157,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <showDeprecation>true</showDeprecation>
+                    <showDeprecation>false</showDeprecation>
                 </configuration>
             </plugin>
             <plugin>
@@ -195,7 +195,7 @@
                                 <fileVersion>1.0.0.0</fileVersion>
                                 <txtFileVersion>1.0.0.0</txtFileVersion>
                                 <fileDescription>${project.name} - The Grand Europeana Data Wizard King</fileDescription>
-                                <copyright>Copyright (c) 2019 Michael Büchner</copyright>
+                                <copyright>Copyright (c) 2019, 2020 Michael Büchner</copyright>
                                 <companyName>Deutsche Digitale Bibliothek</companyName>
                                 <productVersion>3.0.0.0</productVersion>
                                 <txtProductVersion>${project.version}</txtProductVersion>
