--- a/src/main/resources/.properties
+++ b/src/main/resources/.properties
@@ -12,6 +12,7 @@ https://www.deutsche-digitale-bibliothek.de/ns/ddb-linkedData-profile
 
 europack.filters=CropRdfFilter|\
 HierarchieFilter|\
+VgBildKunstFilter|\
 DcDescriptionFilter|\
 DctermsLanguageFilter|\
 DctermsLinguisticSystemFilter|\
