--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.ddb</groupId>
     <artifactId>europack</artifactId>
-    <version>3.2-beta.3</version>
+    <version>3.3-beta.1</version>
     <packaging>jar</packaging>
     <name>Europack</name>
     <url>https://mbuechner.github.io/europack/</url>
@@ -68,12 +68,12 @@
         <dependency>
             <groupId>org.ehcache</groupId>
             <artifactId>ehcache</artifactId>
-            <version>3.9.1</version>
+            <version>3.9.4</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.12.1</version>
+            <version>2.12.3</version>
             <type>jar</type>
         </dependency>
 <!--        <dependency>
@@ -165,7 +165,7 @@
             <plugin>
                 <groupId>com.akathist.maven.plugins.launch4j</groupId>
                 <artifactId>launch4j-maven-plugin</artifactId>
-                <version>1.7.25</version>
+                <version>2.1.1</version>
                 <executions>
                     <execution>
                         <id>l4j-gui</id>
@@ -197,7 +197,7 @@
                                 <fileVersion>1.0.0.0</fileVersion>
                                 <txtFileVersion>1.0.0.0</txtFileVersion>
                                 <fileDescription>${project.name} - The Grand Europeana Data Wizard King</fileDescription>
-                                <copyright>Copyright (c) 2019, 2020 Michael Büchner</copyright>
+                                <copyright>Copyright (c) 2019-2021 Michael Büchner</copyright>
                                 <companyName>Deutsche Digitale Bibliothek</companyName>
                                 <productVersion>3.0.0.0</productVersion>
                                 <txtProductVersion>${project.version}</txtProductVersion>
@@ -258,12 +258,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>3.1.2</version>
             </plugin>
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>4.2.0</version>
+                <version>4.2.3</version>
             </plugin>
         </plugins>
     </reporting>
