--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <sonar.projectKey>mbuechner_europack</sonar.projectKey>
-        <sonar.organization>mbuechner</sonar.organization>
-        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <repositories>
         <repository>
@@ -73,7 +70,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.13.4</version>
+            <version>2.14.0-rc1</version>
             <type>jar</type>
         </dependency>
 <!--        <dependency>
