Fixed bug with emory growth under very long runs; added UserAgent

--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,8 @@
                             <addClasspath>true</addClasspath>
                             <mainClass>de.ddb.labs.europack.Main</mainClass>
                             <classpathPrefix>lib/</classpathPrefix>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                             <!--<classpathLayoutType>repository</classpathLayoutType>-->
                         </manifest>
                     </archive>
